# x

./: .gitignore  Cargo.toml  README.md  clippy.toml  justfile
.github/workflows/: ci.yaml
src/: analyzer.rs  app.rs  arguments.rs  bindings.rs  chain.rs  device.rs  error.rs  event.rs  field.rs  filter.rs  format.rs  frame.rs  hub.rs  image.rs  input.rs  into_usize.rs  main.rs  message.rs  options.rs  parameter.rs  program.rs  recorder.rs  renderer.rs  sample.wgsl  shader.wgsl  shared.rs  slice_ext.rs  state.rs  stream.rs  subcommand.rs  tally.rs  tap.rs  target.rs  templates.rs  text.rs  tiling.rs  track.rs  uniforms.rs  value.rs  vec2f.rs  (+1 more)
src/subcommand/: probe.rs  run.rs  shader.rs  test.rs
templates/: shader.wgsl
