[package]
edition = "2021"
name = "x"
publish = false
version = "0.0.0"

[dependencies]
boilerplate = "1.0.1"
clap = { version = "4.5.21", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.0"
flume = "0.11.1"
font-kit = "0.14.2"
log = "0.4.22"
midir = "0.10.1"
midly = "0.5.3"
nalgebra = "0.33.2"
png = "0.17.16"
pollster = "0.4.0"
regex = "1.11.1"
rodio = { version = "0.20.1", features = ["symphonia-all"], default-features = false }
rustfft = "6.2.0"
skrifa = "0.30.0"
snafu = "0.8.5"
strum = { version = "0.27.1", features = ["derive"] }
symphonia = { version = "*", features = [ "all-codecs", "all-formats" ] }
tabled = { version = "0.20.0" }
vello = { git = "https://github.com/linebender/vello.git" }
walkdir = "2.5.0"
wgpu = "24.0.1"
winit = "0.30.5"

[dev-dependencies]
hound = "3.5.1"
tempfile = "3.17.1"

[lints.rust]
mismatched-lifetime-syntaxes = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
cast-lossless = "allow"
cast-precision-loss = "allow"
float-cmp = "allow"
needless-pass-by-value = "allow"
pedantic = { level = "deny", priority = -1 }
similar-names = "allow"
struct-excessive-bools = "allow"
struct_field_names = "allow"
too-many-arguments = "allow"
too-many-lines = "allow"
unnecessary_wraps = "allow"
wildcard-imports = "allow"
